# projekt-group12-project1

./: .gitignore  CMakeLists.txt  TESTS.cpp  catch2-testing.cpp  functions.c  functions.h  hello.c  hello.h  main.c  main.h  readme.md
